crates/jolt_kotlin_fmt/tests/snapshots/layout_fit_boundaries__annotated_lambda_parameters_at_width_100.snap
---
source: crates/jolt_kotlin_fmt/tests/layout_fit_boundaries.rs
expression: width_100
---
val short = { @Mark value: Int -> value }

val medium = { @Configured("moderate") value: MediumType -> value }

val long = { @AnnotationWithAnExceptionallyLongName("an-exceptionally-long-argument")
  value: LongType ->
  value
}
